--- a/styles/style.css
+++ b/styles/style.css
@@ -190,3 +190,50 @@ hr {
 .hour {
   color: #ff4a60;
 }
+
+/* ----------
+Media queries 
+-------------*/
+
+/* Mobile devices */
+
+@media only screen and (max-width:688px) {
+  nav{
+    width: 100%;
+  }
+  .page-links li {
+  padding-left: 10px;
+  font-size: small;
+}
+  .container{
+    width: 100%;
+  }
+  .players ,.top-blogs{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+.section-title{
+  text-align: center;
+}
+.player, .blogs,.latest-courses{
+  flex-direction: column;
+}
+
+.blogs>span{
+  margin: 0;
+}
+.blogs>span>h3 br{
+  display: none;
+}
+.course{
+  width: 77%;
+}
+.blog-title{
+  text-align: left;
+}
+.top-players{
+  position: relative;
+  left: -25px;
+}
+
+}
